WIKI-72: Add css package for table of UIWikiPagePreview component to avoiding inconsistent when displaying table on IE7 and Firefox

--- a/wiki-webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/wiki-webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -684,6 +684,10 @@ table.UIFormGrid div.Id {
 	width: auto;
 }
 
+.UIWikiPagePreview .UIWikiPortlet .WikiContent table {
+	width: auto;
+}
+
 .UIWikiPagePreview th {
 	border-right: 1px solid #dddddd;
 	background: #f5f5f5;
